# hailburst

./: .gitignore  BIOS-bochs-latest  CMakeLists.txt  LICENSE  README.md  bochs.input  bulk.sh  chart.sh  ctrl.sh  go.mod  go.sum  lc.sh  local.config.template  make.sh  postprocess.py  rootfs.iso9660  run.sh  sim.sh  summarize.sh
bare-arm/: .gitignore  Makefile  arm.h  bitflip_rates.py  ctrl.py  gdb.sh  gic.c  gic.h  io.h  link.ld  main.c  run.sh  start.s  stubs.c  test_harness.py  thread_freertos.c  timer.c  timer.h  virtio.c  virtio.h  virtqueue.h
bare-arm/include/: FreeRTOSConfig.h  arm.h  gic.h  io.h  malloc.h  thread_freertos.h  timer.h  unistd.h  virtio.h
bare-arm/include/asm/: byteorder.h  errno.h  ioctls.h  socket.h  types.h  unistd.h
bare-arm/include/asm-generic/: signal-defs.h
ctrl/: main.go
ctrl/bare/: main.go
ctrl/batch/: main.go
ctrl/bulk/: main.go
ctrl/chart/: main.go  scan.go
ctrl/debuglog/: debug.go  format.go  main.go  parser.go  render.go
ctrl/interactive/: main.go
ctrl/netlog/: main.go  parse.go
ctrl/plot/: display.go  main.go  timeline.go  write.go
ctrl/script/: bitflip_rates.py  ctrl.py  gdb.sh  postprocess.py
ctrl/stats/: main.go
ctrl/summarize/: main.go
ctrl/trial/: trial.go
ctrl/util/: misc.go  proc.go  viterbi.go
ext/: Config.in  external.desc  external.mk  linux-defconfig
ext/configs/: failbochs_defconfig  hailburst_defconfig
fsw/: .gitignore  SConscript  SConstruct
fsw/bootrom/: SConscript  boot.c  link.ld  start.s
fsw/bus/: SConscript  codec.c  exchange.c  rmap.c  rmap_helpers.c  switch.c
fsw/bus/test/: fifo.c  (+7 more)
fsw/elf/: SConscript  elf.c
fsw/fakewire/: codec.c  exchange.c  link_freertos.c  link_linux.c  rmap.c  rmap_helpers.c  switch.c
fsw/flight/: SConscript  clock.c  comm.c  command.c  heartbeat.c  magnetometer.c  pingback.c  radio.c  radio_common.c  radio_down.c  radio_up.c  spacecraft.c  telemetry.c
fsw/freertos/: SConscript  SPlatform  clock.c  crash.c  debug.c  entrypoint.s  fakewire_link.c  gic.c  link.ld  main.c  port.c  portASM.S  prog.ld  replica.ld  rtos_heap_4.c  rtos_list.c  rtos_port.c  rtos_queue.c  rtos_tasks.c  scrubber.c  scrubber_api.c  scrubber_task.c  start.s  stubs.c  thread.c  timer.c  virtio.c  virtio_console.c  watchdog.c
fsw/include/: SConscript
fsw/linux/: S80app  SConscript  SPlatform  clip.c  clock.c  data.ld  debug.c  entrypoint.c  eplock.c  fakewire_link.c  platform.c  queue.c  semaphore.c  stream.c
fsw/main/: .gitignore  app_scrub.c  chart.c  cmd.c  comm.c  command.c  debug.c  heartbeat.c  init.c  magnetometer.c  multichart.c  radio.c  ringbuf.c  spacecraft.c  stream.c  telemetry.c  tlm.c  wall.c
fsw/synch/: SConscript  chart.c  clip.c  duct.c  init.c  multichart.c  notepad.c  pipe.c  pipebuf.c  stream.c  vochart.c
fsw/toolchain/: SConscript  excise.c  linker.py  log_plugin.cpp  preprocessor.py
fsw/vivid/: SConscript  SPlatform  abort.c  clip.c  clip_entry.s  crash.c  entrypoint.s  fakewire_link.c  gic.c  idle.c  link.ld  replica.ld  rtos_port.c  rtos_tasks.c  scrubber.c  scrubber_task.c  startup.c  stubs.c  tasks.c  thread.c  virtio.c  virtio_console.c  virtio_device.c  virtio_input.c  virtio_output.c  watchdog.c
sim/component/: controller.go  databuffer.go  datapump.go  datasplit.go  dispatcher.go  meter.go  recorder.go  twixt.go
sim/model/: model.go  vtime.go
sim/spacecraft/: spacecraft.go
sim/telecomm/: path.go  schedule.go  schedule_test.go
sim/testpoint/: data.go  fwchar.go  fwpacket.go  logger.go
sim/timesync/: timesync.go
sim/util/: bits.go  bits_test.go  encoding.go
sim/verifier/: requirements.go  tracker.go  verifier.go
src/ctrl/: main.go
src/sim/: main.go  modelapp.go  testapp.go  timesync.go  vtime.go
(+399 files in other folders)
